parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> func
Rule 2     prog -> func prog
Rule 3     func -> FUNCTION iden LPARANT flist RPARANT RETURNS type COLON body END
Rule 4     func -> FUNCTION iden LPARANT error RPARANT RETURNS type COLON body END
Rule 5     body -> stmt
Rule 6     body -> stmt body
Rule 7     stmt -> expr SEMICOLON
Rule 8     stmt -> defvar SEMICOLON
Rule 9     stmt -> IF LPARANT expr RPARANT stmt else_choice
Rule 10    stmt -> IF LPARANT error RPARANT stmt else_choice
Rule 11    else_choice -> empty
Rule 12    else_choice -> ELSE stmt
Rule 13    stmt -> WHILE LPARANT expr RPARANT DO stmt
Rule 14    stmt -> WHILE LPARANT error RPARANT DO stmt
Rule 15    stmt -> WHILE LPARANT expr RPARANT error stmt
Rule 16    stmt -> FOREACH LPARANT iden OF expr RPARANT stmt
Rule 17    stmt -> RETURN expr SEMICOLON
Rule 18    stmt -> COLON body END
Rule 19    defvar -> VAL type iden
Rule 20    expr -> iden LPARANT clist RPARANT
Rule 21    expr -> iden LPARANT error RPARANT
Rule 22    expr -> expr LBRACKET expr RBRACKET
Rule 23    expr -> expr LBRACKET error RBRACKET
Rule 24    expr -> expr QUEST_MARK expr COLON expr
Rule 25    expr -> expr QUEST_MARK expr error expr
Rule 26    expr -> expr EQUAL expr
Rule 27    expr -> expr PLUS expr
Rule 28    expr -> expr MINUS expr
Rule 29    expr -> expr MULTIPLY expr
Rule 30    expr -> expr DIVIDE expr
Rule 31    expr -> expr PERCENT expr
Rule 32    expr -> expr SMALL expr
Rule 33    expr -> expr BIG expr
Rule 34    expr -> expr EQUAL_EQUAL expr
Rule 35    expr -> expr EXCL_EQUAL expr
Rule 36    expr -> expr SMALL_EQUAL expr
Rule 37    expr -> expr BIG_EQUAL expr
Rule 38    expr -> expr PIPE_PIPE expr
Rule 39    expr -> expr AMP_AMP expr
Rule 40    expr -> EXCL_MARK expr
Rule 41    expr -> MINUS expr
Rule 42    expr -> PLUS expr
Rule 43    expr -> LPARANT expr RPARANT
Rule 44    expr -> LPARANT error RPARANT
Rule 45    expr -> iden
Rule 46    expr -> num
Rule 47    flist -> empty
Rule 48    flist -> type iden
Rule 49    flist -> type iden COMMA flist
Rule 50    clist -> empty
Rule 51    clist -> expr
Rule 52    clist -> expr COMMA clist
Rule 53    type -> INT
Rule 54    type -> ARRAY
Rule 55    type -> NIL
Rule 56    num -> NUMBER
Rule 57    iden -> ID
Rule 58    empty -> <empty>

Terminals, with rules where they appear

AMP_AMP              : 39
ARRAY                : 54
BIG                  : 33
BIG_EQUAL            : 37
COLON                : 3 4 18 24
COMMA                : 49 52
DIVIDE               : 30
DO                   : 13 14
ELSE                 : 12
END                  : 3 4 18
EQUAL                : 26
EQUAL_EQUAL          : 34
EXCL_EQUAL           : 35
EXCL_MARK            : 40
FOREACH              : 16
FUNCTION             : 3 4
ID                   : 57
IF                   : 9 10
INT                  : 53
LBRACKET             : 22 23
LPARANT              : 3 4 9 10 13 14 15 16 20 21 43 44
MINUS                : 28 41
MULTIPLY             : 29
NIL                  : 55
NUMBER               : 56
OF                   : 16
PERCENT              : 31
PIPE_PIPE            : 38
PLUS                 : 27 42
QUEST_MARK           : 24 25
RBRACKET             : 22 23
RETURN               : 17
RETURNS              : 3 4
RPARANT              : 3 4 9 10 13 14 15 16 20 21 43 44
SEMICOLON            : 7 8 17
SMALL                : 32
SMALL_EQUAL          : 36
VAL                  : 19
WHILE                : 13 14 15
error                : 4 10 14 15 21 23 25 44

Nonterminals, with rules where they appear

body                 : 3 4 6 18
clist                : 20 52
defvar               : 8
else_choice          : 9 10
empty                : 11 47 50
expr                 : 7 9 13 15 16 17 22 22 23 24 24 24 25 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 43 51 52
flist                : 3 49
func                 : 1 2
iden                 : 3 4 16 19 20 21 45 48 49
num                  : 46
prog                 : 2 0
stmt                 : 5 6 9 10 12 13 14 15 16
type                 : 3 4 19 48 49


state 0

    (0) S' -> . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . FUNCTION iden LPARANT flist RPARANT RETURNS type COLON body END
    (4) func -> . FUNCTION iden LPARANT error RPARANT RETURNS type COLON body END

    FUNCTION        shift and go to state 3

    prog                           shift and go to state 1
    func                           shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> func .
    (2) prog -> func . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . FUNCTION iden LPARANT flist RPARANT RETURNS type COLON body END
    (4) func -> . FUNCTION iden LPARANT error RPARANT RETURNS type COLON body END

    $end            reduce using rule 1 (prog -> func .)
    FUNCTION        shift and go to state 3

    func                           shift and go to state 2
    prog                           shift and go to state 4

state 3

    (3) func -> FUNCTION . iden LPARANT flist RPARANT RETURNS type COLON body END
    (4) func -> FUNCTION . iden LPARANT error RPARANT RETURNS type COLON body END
    (57) iden -> . ID

    ID              shift and go to state 6

    iden                           shift and go to state 5

state 4

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 5

    (3) func -> FUNCTION iden . LPARANT flist RPARANT RETURNS type COLON body END
    (4) func -> FUNCTION iden . LPARANT error RPARANT RETURNS type COLON body END

    LPARANT         shift and go to state 7


state 6

    (57) iden -> ID .

    LPARANT         reduce using rule 57 (iden -> ID .)
    COMMA           reduce using rule 57 (iden -> ID .)
    RPARANT         reduce using rule 57 (iden -> ID .)
    SEMICOLON       reduce using rule 57 (iden -> ID .)
    LBRACKET        reduce using rule 57 (iden -> ID .)
    QUEST_MARK      reduce using rule 57 (iden -> ID .)
    EQUAL           reduce using rule 57 (iden -> ID .)
    PLUS            reduce using rule 57 (iden -> ID .)
    MINUS           reduce using rule 57 (iden -> ID .)
    MULTIPLY        reduce using rule 57 (iden -> ID .)
    DIVIDE          reduce using rule 57 (iden -> ID .)
    PERCENT         reduce using rule 57 (iden -> ID .)
    SMALL           reduce using rule 57 (iden -> ID .)
    BIG             reduce using rule 57 (iden -> ID .)
    EQUAL_EQUAL     reduce using rule 57 (iden -> ID .)
    EXCL_EQUAL      reduce using rule 57 (iden -> ID .)
    SMALL_EQUAL     reduce using rule 57 (iden -> ID .)
    BIG_EQUAL       reduce using rule 57 (iden -> ID .)
    PIPE_PIPE       reduce using rule 57 (iden -> ID .)
    AMP_AMP         reduce using rule 57 (iden -> ID .)
    RBRACKET        reduce using rule 57 (iden -> ID .)
    COLON           reduce using rule 57 (iden -> ID .)
    error           reduce using rule 57 (iden -> ID .)
    OF              reduce using rule 57 (iden -> ID .)


state 7

    (3) func -> FUNCTION iden LPARANT . flist RPARANT RETURNS type COLON body END
    (4) func -> FUNCTION iden LPARANT . error RPARANT RETURNS type COLON body END
    (47) flist -> . empty
    (48) flist -> . type iden
    (49) flist -> . type iden COMMA flist
    (58) empty -> .
    (53) type -> . INT
    (54) type -> . ARRAY
    (55) type -> . NIL

    error           shift and go to state 10
    RPARANT         reduce using rule 58 (empty -> .)
    INT             shift and go to state 12
    ARRAY           shift and go to state 13
    NIL             shift and go to state 14

    flist                          shift and go to state 8
    type                           shift and go to state 9
    empty                          shift and go to state 11

state 8

    (3) func -> FUNCTION iden LPARANT flist . RPARANT RETURNS type COLON body END

    RPARANT         shift and go to state 15


state 9

    (48) flist -> type . iden
    (49) flist -> type . iden COMMA flist
    (57) iden -> . ID

    ID              shift and go to state 6

    iden                           shift and go to state 16

state 10

    (4) func -> FUNCTION iden LPARANT error . RPARANT RETURNS type COLON body END

    RPARANT         shift and go to state 17


state 11

    (47) flist -> empty .

    RPARANT         reduce using rule 47 (flist -> empty .)


state 12

    (53) type -> INT .

    ID              reduce using rule 53 (type -> INT .)
    COLON           reduce using rule 53 (type -> INT .)


state 13

    (54) type -> ARRAY .

    ID              reduce using rule 54 (type -> ARRAY .)
    COLON           reduce using rule 54 (type -> ARRAY .)


state 14

    (55) type -> NIL .

    ID              reduce using rule 55 (type -> NIL .)
    COLON           reduce using rule 55 (type -> NIL .)


state 15

    (3) func -> FUNCTION iden LPARANT flist RPARANT . RETURNS type COLON body END

    RETURNS         shift and go to state 18


state 16

    (48) flist -> type iden .
    (49) flist -> type iden . COMMA flist

    RPARANT         reduce using rule 48 (flist -> type iden .)
    COMMA           shift and go to state 19


state 17

    (4) func -> FUNCTION iden LPARANT error RPARANT . RETURNS type COLON body END

    RETURNS         shift and go to state 20


state 18

    (3) func -> FUNCTION iden LPARANT flist RPARANT RETURNS . type COLON body END
    (53) type -> . INT
    (54) type -> . ARRAY
    (55) type -> . NIL

    INT             shift and go to state 12
    ARRAY           shift and go to state 13
    NIL             shift and go to state 14

    type                           shift and go to state 21

state 19

    (49) flist -> type iden COMMA . flist
    (47) flist -> . empty
    (48) flist -> . type iden
    (49) flist -> . type iden COMMA flist
    (58) empty -> .
    (53) type -> . INT
    (54) type -> . ARRAY
    (55) type -> . NIL

    RPARANT         reduce using rule 58 (empty -> .)
    INT             shift and go to state 12
    ARRAY           shift and go to state 13
    NIL             shift and go to state 14

    type                           shift and go to state 9
    flist                          shift and go to state 22
    empty                          shift and go to state 11

state 20

    (4) func -> FUNCTION iden LPARANT error RPARANT RETURNS . type COLON body END
    (53) type -> . INT
    (54) type -> . ARRAY
    (55) type -> . NIL

    INT             shift and go to state 12
    ARRAY           shift and go to state 13
    NIL             shift and go to state 14

    type                           shift and go to state 23

state 21

    (3) func -> FUNCTION iden LPARANT flist RPARANT RETURNS type . COLON body END

    COLON           shift and go to state 24


state 22

    (49) flist -> type iden COMMA flist .

    RPARANT         reduce using rule 49 (flist -> type iden COMMA flist .)


state 23

    (4) func -> FUNCTION iden LPARANT error RPARANT RETURNS type . COLON body END

    COLON           shift and go to state 25


state 24

    (3) func -> FUNCTION iden LPARANT flist RPARANT RETURNS type COLON . body END
    (5) body -> . stmt
    (6) body -> . stmt body
    (7) stmt -> . expr SEMICOLON
    (8) stmt -> . defvar SEMICOLON
    (9) stmt -> . IF LPARANT expr RPARANT stmt else_choice
    (10) stmt -> . IF LPARANT error RPARANT stmt else_choice
    (13) stmt -> . WHILE LPARANT expr RPARANT DO stmt
    (14) stmt -> . WHILE LPARANT error RPARANT DO stmt
    (15) stmt -> . WHILE LPARANT expr RPARANT error stmt
    (16) stmt -> . FOREACH LPARANT iden OF expr RPARANT stmt
    (17) stmt -> . RETURN expr SEMICOLON
    (18) stmt -> . COLON body END
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (19) defvar -> . VAL type iden
    (57) iden -> . ID
    (56) num -> . NUMBER

    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOREACH         shift and go to state 35
    RETURN          shift and go to state 36
    COLON           shift and go to state 28
    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    VAL             shift and go to state 41
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    iden                           shift and go to state 26
    body                           shift and go to state 29
    stmt                           shift and go to state 30
    expr                           shift and go to state 31
    defvar                         shift and go to state 32
    num                            shift and go to state 40

state 25

    (4) func -> FUNCTION iden LPARANT error RPARANT RETURNS type COLON . body END
    (5) body -> . stmt
    (6) body -> . stmt body
    (7) stmt -> . expr SEMICOLON
    (8) stmt -> . defvar SEMICOLON
    (9) stmt -> . IF LPARANT expr RPARANT stmt else_choice
    (10) stmt -> . IF LPARANT error RPARANT stmt else_choice
    (13) stmt -> . WHILE LPARANT expr RPARANT DO stmt
    (14) stmt -> . WHILE LPARANT error RPARANT DO stmt
    (15) stmt -> . WHILE LPARANT expr RPARANT error stmt
    (16) stmt -> . FOREACH LPARANT iden OF expr RPARANT stmt
    (17) stmt -> . RETURN expr SEMICOLON
    (18) stmt -> . COLON body END
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (19) defvar -> . VAL type iden
    (57) iden -> . ID
    (56) num -> . NUMBER

    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOREACH         shift and go to state 35
    RETURN          shift and go to state 36
    COLON           shift and go to state 28
    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    VAL             shift and go to state 41
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    iden                           shift and go to state 26
    body                           shift and go to state 43
    stmt                           shift and go to state 30
    expr                           shift and go to state 31
    defvar                         shift and go to state 32
    num                            shift and go to state 40

state 26

    (20) expr -> iden . LPARANT clist RPARANT
    (21) expr -> iden . LPARANT error RPARANT
    (45) expr -> iden .

    LPARANT         shift and go to state 44
    SEMICOLON       reduce using rule 45 (expr -> iden .)
    LBRACKET        reduce using rule 45 (expr -> iden .)
    QUEST_MARK      reduce using rule 45 (expr -> iden .)
    EQUAL           reduce using rule 45 (expr -> iden .)
    PLUS            reduce using rule 45 (expr -> iden .)
    MINUS           reduce using rule 45 (expr -> iden .)
    MULTIPLY        reduce using rule 45 (expr -> iden .)
    DIVIDE          reduce using rule 45 (expr -> iden .)
    PERCENT         reduce using rule 45 (expr -> iden .)
    SMALL           reduce using rule 45 (expr -> iden .)
    BIG             reduce using rule 45 (expr -> iden .)
    EQUAL_EQUAL     reduce using rule 45 (expr -> iden .)
    EXCL_EQUAL      reduce using rule 45 (expr -> iden .)
    SMALL_EQUAL     reduce using rule 45 (expr -> iden .)
    BIG_EQUAL       reduce using rule 45 (expr -> iden .)
    PIPE_PIPE       reduce using rule 45 (expr -> iden .)
    AMP_AMP         reduce using rule 45 (expr -> iden .)
    RPARANT         reduce using rule 45 (expr -> iden .)
    COMMA           reduce using rule 45 (expr -> iden .)
    RBRACKET        reduce using rule 45 (expr -> iden .)
    COLON           reduce using rule 45 (expr -> iden .)
    error           reduce using rule 45 (expr -> iden .)


state 27

    (43) expr -> LPARANT . expr RPARANT
    (44) expr -> LPARANT . error RPARANT
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (57) iden -> . ID
    (56) num -> . NUMBER

    error           shift and go to state 46
    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    expr                           shift and go to state 45
    iden                           shift and go to state 26
    num                            shift and go to state 40

state 28

    (18) stmt -> COLON . body END
    (5) body -> . stmt
    (6) body -> . stmt body
    (7) stmt -> . expr SEMICOLON
    (8) stmt -> . defvar SEMICOLON
    (9) stmt -> . IF LPARANT expr RPARANT stmt else_choice
    (10) stmt -> . IF LPARANT error RPARANT stmt else_choice
    (13) stmt -> . WHILE LPARANT expr RPARANT DO stmt
    (14) stmt -> . WHILE LPARANT error RPARANT DO stmt
    (15) stmt -> . WHILE LPARANT expr RPARANT error stmt
    (16) stmt -> . FOREACH LPARANT iden OF expr RPARANT stmt
    (17) stmt -> . RETURN expr SEMICOLON
    (18) stmt -> . COLON body END
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (19) defvar -> . VAL type iden
    (57) iden -> . ID
    (56) num -> . NUMBER

    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOREACH         shift and go to state 35
    RETURN          shift and go to state 36
    COLON           shift and go to state 28
    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    VAL             shift and go to state 41
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    body                           shift and go to state 47
    stmt                           shift and go to state 30
    expr                           shift and go to state 31
    defvar                         shift and go to state 32
    iden                           shift and go to state 26
    num                            shift and go to state 40

state 29

    (3) func -> FUNCTION iden LPARANT flist RPARANT RETURNS type COLON body . END

    END             shift and go to state 48


state 30

    (5) body -> stmt .
    (6) body -> stmt . body
    (5) body -> . stmt
    (6) body -> . stmt body
    (7) stmt -> . expr SEMICOLON
    (8) stmt -> . defvar SEMICOLON
    (9) stmt -> . IF LPARANT expr RPARANT stmt else_choice
    (10) stmt -> . IF LPARANT error RPARANT stmt else_choice
    (13) stmt -> . WHILE LPARANT expr RPARANT DO stmt
    (14) stmt -> . WHILE LPARANT error RPARANT DO stmt
    (15) stmt -> . WHILE LPARANT expr RPARANT error stmt
    (16) stmt -> . FOREACH LPARANT iden OF expr RPARANT stmt
    (17) stmt -> . RETURN expr SEMICOLON
    (18) stmt -> . COLON body END
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (19) defvar -> . VAL type iden
    (57) iden -> . ID
    (56) num -> . NUMBER

    END             reduce using rule 5 (body -> stmt .)
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOREACH         shift and go to state 35
    RETURN          shift and go to state 36
    COLON           shift and go to state 28
    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    VAL             shift and go to state 41
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    stmt                           shift and go to state 30
    body                           shift and go to state 49
    expr                           shift and go to state 31
    defvar                         shift and go to state 32
    iden                           shift and go to state 26
    num                            shift and go to state 40

state 31

    (7) stmt -> expr . SEMICOLON
    (22) expr -> expr . LBRACKET expr RBRACKET
    (23) expr -> expr . LBRACKET error RBRACKET
    (24) expr -> expr . QUEST_MARK expr COLON expr
    (25) expr -> expr . QUEST_MARK expr error expr
    (26) expr -> expr . EQUAL expr
    (27) expr -> expr . PLUS expr
    (28) expr -> expr . MINUS expr
    (29) expr -> expr . MULTIPLY expr
    (30) expr -> expr . DIVIDE expr
    (31) expr -> expr . PERCENT expr
    (32) expr -> expr . SMALL expr
    (33) expr -> expr . BIG expr
    (34) expr -> expr . EQUAL_EQUAL expr
    (35) expr -> expr . EXCL_EQUAL expr
    (36) expr -> expr . SMALL_EQUAL expr
    (37) expr -> expr . BIG_EQUAL expr
    (38) expr -> expr . PIPE_PIPE expr
    (39) expr -> expr . AMP_AMP expr

    SEMICOLON       shift and go to state 50
    LBRACKET        shift and go to state 51
    QUEST_MARK      shift and go to state 52
    EQUAL           shift and go to state 53
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    MULTIPLY        shift and go to state 56
    DIVIDE          shift and go to state 57
    PERCENT         shift and go to state 58
    SMALL           shift and go to state 59
    BIG             shift and go to state 60
    EQUAL_EQUAL     shift and go to state 61
    EXCL_EQUAL      shift and go to state 62
    SMALL_EQUAL     shift and go to state 63
    BIG_EQUAL       shift and go to state 64
    PIPE_PIPE       shift and go to state 65
    AMP_AMP         shift and go to state 66


state 32

    (8) stmt -> defvar . SEMICOLON

    SEMICOLON       shift and go to state 67


state 33

    (9) stmt -> IF . LPARANT expr RPARANT stmt else_choice
    (10) stmt -> IF . LPARANT error RPARANT stmt else_choice

    LPARANT         shift and go to state 68


state 34

    (13) stmt -> WHILE . LPARANT expr RPARANT DO stmt
    (14) stmt -> WHILE . LPARANT error RPARANT DO stmt
    (15) stmt -> WHILE . LPARANT expr RPARANT error stmt

    LPARANT         shift and go to state 69


state 35

    (16) stmt -> FOREACH . LPARANT iden OF expr RPARANT stmt

    LPARANT         shift and go to state 70


state 36

    (17) stmt -> RETURN . expr SEMICOLON
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (57) iden -> . ID
    (56) num -> . NUMBER

    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    expr                           shift and go to state 71
    iden                           shift and go to state 26
    num                            shift and go to state 40

state 37

    (42) expr -> PLUS . expr
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (57) iden -> . ID
    (56) num -> . NUMBER

    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    expr                           shift and go to state 72
    iden                           shift and go to state 26
    num                            shift and go to state 40

state 38

    (41) expr -> MINUS . expr
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
    (22) expr -> . expr LBRACKET expr RBRACKET
    (23) expr -> . expr LBRACKET error RBRACKET
    (24) expr -> . expr QUEST_MARK expr COLON expr
    (25) expr -> . expr QUEST_MARK expr error expr
    (26) expr -> . expr EQUAL expr
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MULTIPLY expr
    (30) expr -> . expr DIVIDE expr
    (31) expr -> . expr PERCENT expr
    (32) expr -> . expr SMALL expr
    (33) expr -> . expr BIG expr
    (34) expr -> . expr EQUAL_EQUAL expr
    (35) expr -> . expr EXCL_EQUAL expr
    (36) expr -> . expr SMALL_EQUAL expr
    (37) expr -> . expr BIG_EQUAL expr
    (38) expr -> . expr PIPE_PIPE expr
    (39) expr -> . expr AMP_AMP expr
    (40) expr -> . EXCL_MARK expr
    (41) expr -> . MINUS expr
    (42) expr -> . PLUS expr
    (43) expr -> . LPARANT expr RPARANT
    (44) expr -> . LPARANT error RPARANT
    (45) expr -> . iden
    (46) expr -> . num
    (57) iden -> . ID
    (56) num -> . NUMBER

    EXCL_MARK       shift and go to state 39
    MINUS           shift and go to state 38
    PLUS            shift and go to state 37
    LPARANT         shift and go to state 27
    ID              shift and go to state 6
    NUMBER          shift and go to state 42

    expr                           shift and go to state 73
    iden                           shift and go to state 26
    num                            shift and go to state 40

state 39

    (40) expr -> EXCL_MARK . expr
    (20) expr -> . iden LPARANT clist RPARANT
    (21) expr -> . iden LPARANT error RPARANT
